--- a/package.json
+++ b/package.json
@@ -3,25 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
-  "imports": {
-    "#config/": "./src/config/",
-    "#controllers/": "./src/controllers/",
-    "#middleware/": "./src/middleware/",
-    "#services/": "./src/services/",
-    "#models/": "./src/models/",
-    "#routes/": "./src/routes/",
-    "#utils/": "./src/utils/",
-    "#validations/": "./src/validations/"
-  },
   "scripts": {
     "dev": "node --watch src/index.js",
+    "start": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "dev:docker": "sh ./scripts/dev.sh"
   },
   "repository": {
     "type": "git",
@@ -36,15 +28,20 @@
   "homepage": "https://github.com/shirocodes/acquisitions#readme",
   "description": "",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.11",
+    "@arcjet/node": "^1.0.0-beta.11",
     "@neondatabase/serverless": "^1.0.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
