--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,8 @@ yarn-error.log*
 
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.production.local
+.env.development
+.env.production
 
 # Logs
 logs/
