--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acquisitions",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "node --watch src/index.js",
     "start": "node src/index.js",
@@ -40,11 +40,13 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "pg": "^8.16.3",
     "winston": "^3.17.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
